WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171008
stress/call-apply-exponential-bytecode-size.js.no-llint failing on 32-bit debug for OOM on executable memory
https://bugs.webkit.org/show_bug.cgi?id=171008
Summary
stress/call-apply-exponential-bytecode-size.js.no-llint failing on 32-bit deb...
Saam Barati
Reported
2017-04-19 14:13:07 PDT
see:
https://build.webkit.org/builders/Apple%20Sierra%2032-bit%20JSC%20%28BuildAndTest%29/builds/349/steps/webkit-32bit-jsc-test/logs/stdio
Attachments
patch
(1.67 KB, patch)
2017-05-04 01:15 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-05-03 11:24:39 PDT
This test is still failing and making the 32-bit JSC bot red.
Saam Barati
Comment 2
2017-05-03 11:52:45 PDT
(In reply to Ryan Haddad from
comment #1
)
> This test is still failing and making the 32-bit JSC bot red.
Ok. I'll look into it.
Saam Barati
Comment 3
2017-05-04 01:15:04 PDT
Created
attachment 309025
[details]
patch
Yusuke Suzuki
Comment 4
2017-05-04 04:51:45 PDT
Comment on
attachment 309025
[details]
patch r=me
WebKit Commit Bot
Comment 5
2017-05-04 05:21:02 PDT
Comment on
attachment 309025
[details]
patch Clearing flags on attachment: 309025 Committed
r216180
: <
http://trac.webkit.org/changeset/216180
>
WebKit Commit Bot
Comment 6
2017-05-04 05:21:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug